2006-06-11  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gok has been (silently)
	branched for gnome-2-14.

2006-06-10  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: Corrected ekiga's POT name.

2006-06-05  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added lsr to extras.

2006-06-04  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: gedit-plugins lives again.

2006-06-04  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: zenity HEAD is using non-versioned domain now.

2006-05-26  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: Added resapplet module into extras.

2006-05-24  Kjartan Maraas  <kmaraas@gnome.org>

	* translation-status.xml: Updated branch info for 2.14.x.

2006-05-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: ekiga and gnome-system-tools have been
	branched for gnome-2-14.

2006-05-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed baobab; it is now part of
	gnome-utils. Thanks to Funda Wang for pointing it out.

2006-05-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gconf-editor and gconf have been
	branched for gnome-2-14.

2006-05-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: totem has been
	branched for gnome-2-14.

2006-05-01  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: evo* should be in X.8 series.

2006-04-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed the gnome-applets-locations
	branch, and evolution-webcal, nautilus, eel, gnome-session,
	and gdm2 have all been branched for gnome-2-14.

2006-04-26  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added chronojump.

2006-04-23  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-mag, gnome-vfs, and libwnck
	have all been branched for gnome-2-14.

2006-04-19  Christian Rose  <menthos@menthos.com>
