@@ -46,6 +46,17 @@
       <description>Extra GNOME software of all sorts.</description>
     </group>
   </release>
+  <module name="alacarte">
+    <version release="HEAD">
+      <component name="alacarte" dir="alacarte" group="extras">
+        <podir dir="po"/>
+        <potname name="alacarte.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="alleyoop">
     <version release="HEAD">
       <component name="alleyoop" dir="alleyoop" group="extras">
