@@ -1,5 +1,9 @@
 2006-06-11  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Added alacarte to extras.
+
+2006-06-11  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: gok has been (silently)
 	branched for gnome-2-14.
 
